@@ -9,7 +9,9 @@
 #			Ok coomers.
 temp = 0.4
 
-repetition-penalty = 1.2
+#Repetitiveness Penalty
+#controls how repetitive the AIs output is allowed to be. Ideal values unknown and untested so far
+rep-pen = 1.2
 
 #The number of words the AI has to choose from.
 #	It always chooses the "top k" most likely next words before randomly picking one according to temperature.
